# sampleFp16Vector

./: CMakeLists.txt  GTest.cmake  LICENSE  README.md  converter.cpp  demoMain.cpp  featureSupport.h  featureSupportARM.cpp  featureSupportX86.cpp  floatMul.cpp  floatMul.h  main.cpp  platformMalloc.h  platformMallocDefines.h  sampleFp16.cu  simdUtils.h  verifyMul.cpp
