cmake_minimum_required(VERSION 2.8)

project(sampleFp16)

if(CMAKE_SYSTEM_PROCESSOR MATCHES "^(arm.*|ARM.*)")
	set(ARM 1)
else()
	set(X86 1)
endif()

if (X86)
	message(STATUS "detected x86 architecture")
	set (FEATURESUPPORT floatMul.cpp featureSupportX86.cpp)
	if (UNIX)
		set(CMAKE_CXX_FLAGS "-mf16c")
	endif()
elseif (ARM)
	message(STATUS "detected ARM architecture")
	set (FEATURESUPPORT floatMul.cpp featureSupportARM.cpp)
	if (UNIX)
		set(CMAKE_CXX_FLAGS "-mfp16-format=ieee -mfpu=neon-fp16 -flax-vector-conversions")
	endif()
endif()

find_package(OpenCV REQUIRED)

add_executable(verifyMultiply verifyMul.cpp ${FEATURESUPPORT})
add_executable(sampleFp16 main.cpp ${FEATURESUPPORT})
add_executable(floatImage2HalfImage converter.cpp ${FEATURESUPPORT})
add_executable(demo demoMain.cpp ${FEATURESUPPORT})

if(OpenCV_FOUND)
  include_directories(${OpenCV_INCLUDE_DIRS})

  target_link_libraries(floatImage2HalfImage ${OpenCV_LIBS})
  target_link_libraries(demo ${OpenCV_LIBS})

  link_directories(${CUDA_CUDART_LIBRARY})
endif(OpenCV_FOUND)

set(DATA_DIR ${CMAKE_SOURCE_DIR}/data)
set(PRECOMPUTED1 lenaMask)
set(PRECOMPUTED2 defaultMask)
set(IMAGE_TYPE png)
if (WIN32)
	string(REGEX REPLACE "/" "\\\\" DATA_FLOAT1 ${DATA_DIR}/${PRECOMPUTED1}Float.png)
	string(REGEX REPLACE "/" "\\\\" DATA_FLOAT2 ${DATA_DIR}/${PRECOMPUTED2}Float.png)
	string(REGEX REPLACE "/" "\\\\" DATA_HALF1  ${DATA_DIR}/${PRECOMPUTED1}Half.png)
	string(REGEX REPLACE "/" "\\\\" DATA_HALF2  ${DATA_DIR}/${PRECOMPUTED2}Half.png)
	string(REGEX REPLACE "/" "\\\\" TARGET_BIN1 ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR})
	string(REGEX REPLACE "/" "\\\\" TARGET_BIN2 ${CMAKE_CURRENT_BINARY_DIR})
	add_custom_command(TARGET demo COMMAND copy ${DATA_FLOAT1} ${TARGET_BIN1}) 
	add_custom_command(TARGET demo COMMAND copy ${DATA_FLOAT2} ${TARGET_BIN1}) 
	add_custom_command(TARGET demo COMMAND copy ${DATA_HALF1}  ${TARGET_BIN1}) 
	add_custom_command(TARGET demo COMMAND copy ${DATA_HALF2}  ${TARGET_BIN1}) 
	add_custom_command(TARGET demo COMMAND copy ${DATA_FLOAT1} ${TARGET_BIN2}) 
	add_custom_command(TARGET demo COMMAND copy ${DATA_FLOAT2} ${TARGET_BIN2}) 
	add_custom_command(TARGET demo COMMAND copy ${DATA_HALF1}  ${TARGET_BIN2}) 
	add_custom_command(TARGET demo COMMAND copy ${DATA_HALF2}  ${TARGET_BIN2}) 
elseif (UNIX)
	string(DATA_FLOAT1 ${DATA_DIR}/${PRECOMPUTED1}Float.png)
	string(DATA_FLOAT2 ${DATA_DIR}/${PRECOMPUTED2}Float.png)
	string(DATA_HALF1  ${DATA_DIR}/${PRECOMPUTED1}Half.png)
	string(DATA_HALF2  ${DATA_DIR}/${PRECOMPUTED2}Half.png)
	add_custom_command(TARGET demo COMMAND cp -p ${DATA_FLOAT1} ${DATA_FLOAT2} ${DATA_HALF1} ${DATA_HALF2} ${DATA_FLOAT1} ${DATA_FLOAT2} ${DATA_HALF1} ${DATA_HALF2} ${TARGET_BIN1}) 
endif (WIN32)
				
